Add property import feature with URL scraping, including controller action, service, and frontend updates.

--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -37,6 +37,7 @@
 
   <!-- Pagination -->
   <div class="flex justify-center">
-    <%== pagy_nav(@pagy) if @pagy.pages > 1 %>
+    <%# TODO: Réactiver une fois pagy configuré pour Pagy 9+ %>
+    <%#== pagy_nav(@pagy) if @pagy.pages > 1 %>
   </div>
 </div>
