--- a/app/views/households/new.html.erb
+++ b/app/views/households/new.html.erb
@@ -7,7 +7,7 @@
   </div>
 
   <div class="bg-white rounded-xl border border-gray-100 shadow-sm p-6">
-    <%= form_with(model: @household, class: "space-y-6") do |f| %>
+    <%= form_with(model: @household, url: household_path, class: "space-y-6") do |f| %>
       <% if @household.errors.any? %>
         <div class="rounded-lg bg-red-50 p-4">
           <ul class="list-disc list-inside text-sm text-red-700">
