--- a/app/views/properties/_card.html.erb
+++ b/app/views/properties/_card.html.erb
@@ -4,6 +4,8 @@
   <div class="aspect-[16/10] bg-gray-100 relative">
     <% if property.photos.attached? %>
       <%= image_tag property.photos.first.variant(resize_to_fill: [400, 250]), class: "w-full h-full object-cover" %>
+    <% elsif property.parsed_image_urls.any? %>
+      <%= image_tag property.parsed_image_urls.first, class: "w-full h-full object-cover", onerror: "this.src='data:image/svg+xml,%3Csvg xmlns=\'http://www.w3.org/2000/svg\' fill=\'%23d1d5db\' viewBox=\'0 0 24 24\'%3E%3Cpath d=\'M2.25 15.75l5.159-5.159a2.25 2.25 0 013.182 0l5.159 5.159m-1.5-1.5l1.409-1.409a2.25 2.25 0 013.182 0l2.909 2.909M3.75 21h16.5a2.25 2.25 0 002.25-2.25V5.25a2.25 2.25 0 00-2.25-2.25H3.75A2.25 2.25 0 001.5 5.25v13.5A2.25 2.25 0 003.75 21z\'/%3E%3C/svg%3E'" %>
     <% else %>
       <div class="w-full h-full flex items-center justify-center text-gray-300">
         <svg class="w-12 h-12" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M2.25 15.75l5.159-5.159a2.25 2.25 0 013.182 0l5.159 5.159m-1.5-1.5l1.409-1.409a2.25 2.25 0 013.182 0l2.909 2.909M3.75 21h16.5a2.25 2.25 0 002.25-2.25V5.25a2.25 2.25 0 00-2.25-2.25H3.75A2.25 2.25 0 001.5 5.25v13.5A2.25 2.25 0 003.75 21z"/></svg>
