--- a/app/views/properties/show.html.erb
+++ b/app/views/properties/show.html.erb
@@ -18,10 +18,16 @@
   </div>
 
   <!-- Photos -->
-  <% if @property.photos.attached? %>
+  <% if @property.photos.attached? || @property.parsed_image_urls.any? %>
     <div class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-4 gap-2 rounded-xl overflow-hidden">
-      <% @property.photos.each do |photo| %>
-        <%= image_tag photo.variant(resize_to_fill: [400, 300]), class: "w-full h-48 object-cover rounded-lg" %>
+      <% if @property.photos.attached? %>
+        <% @property.photos.each do |photo| %>
+          <%= image_tag photo.variant(resize_to_fill: [400, 300]), class: "w-full h-48 object-cover rounded-lg cursor-pointer hover:opacity-90 transition-opacity" %>
+        <% end %>
+      <% else %>
+        <% @property.parsed_image_urls.each do |img_url| %>
+          <%= image_tag img_url, class: "w-full h-48 object-cover rounded-lg cursor-pointer hover:opacity-90 transition-opacity", loading: "lazy", onerror: "this.style.display='none'" %>
+        <% end %>
       <% end %>
     </div>
   <% end %>
