--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,7 +2,7 @@
   <div class="max-w-md w-full space-y-8">
     <!-- En-tête -->
     <div class="text-center">
-      <h2 class="mt-6 text-4xl font-bold text-gray-900">
+      <h2 class="mt-6 text-2xl sm:text-4xl font-bold text-gray-900">
         Créer un compte
       </h2>
       <p class="mt-2 text-sm text-gray-600">
